replaced banner logos

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -34,19 +34,19 @@
         <!--Main-->
         <div class="container" role="main">
             <!-- Banners -->            
-            <div id="banners">
-                <div class="row">                     
+            <div id="banners" class="row">                                   
                     <div class="col-sm-4">
                         <a href="http://cit.nih.gov/" target="_blank">
-                            <img src="CnIiTh_logo_t.png" height="66" 
+                            <img src="CnIiTh_logo_t.png" height="78" 
                          alt="NIH - Center for Information Technology"                  
                          title="NIH - Center for Information Technology"></a>
                     </div>
 
-                    <div class="col-sm-3">
-                        <img src="SOCcer_logo.png" height="60" 
+                    <div class="col-sm-3" align="right">
+                        <a href="/soccer" target="_blank">
+                        <img src="SOCcer_logo.png" height="80" 
                          alt="Standardized Occupation Coding for Computer-assisted Epidemiologic Research"                  
-                         title="Standardized Occupation Coding for Computer-assisted Epidemiologic Research"></div>
+                         title="Standardized Occupation Coding for Computer-assisted Epidemiologic Research"></a></div>
 
                     <div class="col-sm-5" align="right">
                         <a href="http://dceg.cancer.gov" target="_blank">
@@ -55,8 +55,6 @@
                          title="Banner for NCI Division of Cancer Epidemiology &amp; Genetics, Laboratory of Translational Genomics"
                          class="logo"></a>
                     </div>
-                    
-                </div>
             </div>
 
             <!--Main in Main -->  
