fixed a wrong http link

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="col-sm-3" align="right">
-                        <a href="/soccer" target="_blank">
+                        <a href="/" target="_blank">
                         <img src="SOCcer_logo.png" height="80" 
                          alt="Standardized Occupation Coding for Computer-assisted Epidemiologic Research"                  
                          title="Standardized Occupation Coding for Computer-assisted Epidemiologic Research"></a></div>
