Modified download output UI

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -169,16 +169,15 @@
                                 <div id="validationErrorArea"></div>
                                 <div id="resultArea" >
                                     <div class="row">
-                                        <a id="downloadHref1" href="#"> <i class="example">Click here to download output file</i>
-                                        </a>
+                                        <a id="downloadHref1" class="btn btn-success" href="#">Download Output</a>
+                                        <i class="example"> * Directly opening the CSV file into Excel will render numbers as dates incorrectly</i>                                        
                                     </div>
                                     <div class="row">
                                         <div id="resultContent">No Results</div>
                                     </div>
                                     <div class="row">
-                                        <a id="downloadHref2" href="#">
-                                            <i class="example">Click here to download output file</i>
-                                        </a>
+                                        <a id="downloadHref2" class="btn btn-success" href="#">Download Output</a>
+                                        <i class="example"> * Directly opening the CSV file into Excel will render numbers as dates incorrectly</i>                                        
                                     </div>
                                 </div>
                             </div>
