added meta description tag

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -4,7 +4,8 @@
         <title>Soccer</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">        
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content="SOCcer: Standardized Occupational Coding for Computer-assisted Epidemiologic Research">        
         <!--favicon-->
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <!-- Latest compiled and minified CSS -->
