Removed abbr from index.html

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -84,7 +84,7 @@
                     <!-- HOME Tab -->
                     <div id="homeTab" class="tab-pane fade in active">                        
                         <p>
-							<strong><abbr title="Standardized Occupation Coding for Computer-assisted Epidemiological Research">SOCcer</abbr></strong> is a publicly available application that was developed to assist epidemiological 
+							SOCcer (Standardized Occupation Coding for Computer-assisted Epidemiological Research) is a publicly available application that was developed to assist epidemiological 
 							researchers incorporate occupational risk into their studies.  The application is not intended to replace expert coders, but rather prioritizes job descriptions that would most benefit 
 							from expert coders. Low scoring job descriptions are more likely to require expert review than high scoring job description. The coding is performed using an 
 							<a href="http://en.wikipedia.org/wiki/Ensemble_learning">ensemble classifier</a>, which combines the results of multiple classifiers to produce a single classifier that performs better than 
@@ -168,16 +168,12 @@
 
                             <div id="rightSide" class="col-sm-8">
                                 <div id="validationErrorArea"></div>
-                                <div id="resultArea" >
-                                    <div class="row">
-                                        <a id="downloadHref1" class="btn btn-success" href="#">Download Output</a>
-                                        <i class="example"> * Directly opening the CSV file into Excel will render numbers as dates incorrectly</i>                                        
-                                    </div>
+                                <div id="resultArea" >                                    
                                     <div class="row">
                                         <div id="resultContent">No Results</div>
                                     </div>
                                     <div class="row">
-                                        <a id="downloadHref2" class="btn btn-success" href="#">Download Output</a>
+                                        <a id="downloadHref" class="btn btn-success" href="#">Download Output</a>
                                         <i class="example"> * Directly opening the CSV file into Excel will render numbers as dates incorrectly</i>                                        
                                     </div>
                                 </div>
