added reference to SOCAssign.

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -67,10 +67,13 @@
                     <li>
                         <a href="#soccerTab">SOCcer</a>
                     </li>
-                    <li class="">
+                    <li>
                         <a href="#modelTab">Models</a>
                     </li>
-                     <li class="">
+                    <li>
+                    	<a href="#SOCAssignTab">SOCAssign</a>
+                    </li>
+                     <li>
                         <a href="#resourcesTab">Resources</a>
                     </li>
                     <li>
@@ -197,6 +200,13 @@
 						</tbody>
 					</table>
 					</div>
+
+					<!-- SOCAssign Tab -->
+					<div id="SOCAssignTab" class="tab-pane fade">
+						<p><img src="comingSoon.png" height="70" align="left"/>SOCAssign is an application to assist expert reviewers confirm or correct job descriptions coded by SOCcer.  SOCAssign will read the results of SOCcer
+						and allow coding of up to 3 choices.  SOCAssign detects the coding system in the results (currently only SOC 2010) and checks that the codes assigned are real codes.</p>
+					</div>
+
 					<!-- Resources Tab -->
                     <div id="resourcesTab" class="tab-pane fade">
                      <h3>Resources</h3>
