Fixed 3 accessibility issues

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -155,7 +155,7 @@
                                 <form id="emailForm" action="queue" method="post">
                                     <fieldset>
                                         <legend>Please type in your email address:</legend>
-                                        <label>Email</label>
+                                        <label for="emailAddress">Email</label>
                                         <input type="email" id="emailAddress" name="emailAddress" placeholder="Your email here" required>                    
                                         <span class="help-block"></span>
                                         <button id="emailSubmit" class="btn btn-success" type="submit">Submit</button>
@@ -199,7 +199,7 @@
 
 					<!-- SOCAssign Tab -->
 					<div id="SOCAssignTab" class="tab-pane fade">
-						<p><img src="comingSoon.png" height="70" align="left"/>SOCAssign is an application to assist expert reviewers confirm or correct job descriptions coded by SOCcer.  SOCAssign will read the results of SOCcer
+						<p><img src="comingSoon.png" height="70" align="left" alt="Coming Soon"/>SOCAssign is an application to assist expert reviewers confirm or correct job descriptions coded by SOCcer.  SOCAssign will read the results of SOCcer
 						and allow coding of up to 3 choices.  SOCAssign detects the coding system in the results (currently only SOC 2010) and checks that the codes assigned are real codes.</p>
 					</div>
 
