--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -128,7 +128,7 @@
                                             <option value = "three">SOC System Three</option>
                                             <option value = "four">SOC System Four</option>
                                         </select>
-                                        <button type="button" id="btnInfo" data-toggle="popover" data-trigger="focus" title="MODEL: SOCcer Model v1.0" data-content="Features: JOB Title, SIC, Job Tasks"></button>
+                                        <button type="button" id="btnInfo" data-toggle="popover" data-trigger="focus" title="MODEL: SOCcer Model v1.0" data-content="Features: JobTitle, SIC, JobTasks"></button>
                                     </p>
 
                                     <button id="fileSubmit" class="btn btn-success" type="submit">Upload</button>
