Fixed Spelling of on the SOCcer logo.  Fixed the title of the article.

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -96,7 +96,7 @@
 						
 						<p>If you publish results that use SOCcer, please reference:<br> 
 						Russ DE, Ho K-Y, Colt JS, Armenti KR, Baris D, Wong-Ho C, Davis F, Johnson A, Purdue MP, Karagas MR, Schwarz K, Schwenn M, Silverman DT, Stewart PA, Johnson, CA, Friesen MC, 
-						Computer-based coding of free-text job descriptions to efficiently and reliably incorporate occupational risk factors into large-scale epidemiologic studies. Submitted.
+						Computer-based coding of free-text job descriptions to efficiently identify occupations in epidemiological studies. Submitted.
                         </p>
                         <p>
                             <a href="#" onclick="activateSoccerTab();">Run SOCcer</a>
