--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Soccer</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta name="description" content="SOCcer: Standardized Occupational Coding for Computer-assisted Epidemiologic Research">        
         <!--favicon-->
@@ -14,24 +14,6 @@
         <link rel="stylesheet" href="soccer.css">
     </head>
     <body>
-        <!--NCI Logo-->        
-        <div id="logos">
-            <div id="left">
-                <a href="http://www.cancer.gov" target="_blank">
-                    <img
-                        src="nci.jpg" width="286" height="40" border="0"
-                        alt="National Cancer Institute" title="National Cancer Institute"></a>
-            </div>
-
-            <div id="right">
-                <a href="http://www.cancer.gov" target="_blank">
-                    <img
-                        src="nih.jpg" width="322" height="40" border="0"
-                        alt="at the National Institutes of Health"
-                        title="at the National Institutes of Health"></a>
-            </div>
-        </div>
-
         <!--Main-->
         <div class="container" role="main">
             <!-- Banners -->            
@@ -42,7 +24,6 @@
                          alt="NIH - Center for Information Technology"                  
                          title="NIH - Center for Information Technology"></a>
                     </div>
-
                     <div class="col-sm-3" align="right">
                         <a href="/" target="_blank">
                         <img src="SOCcer_logo.png" height="80" 
@@ -51,7 +32,7 @@
 
                     <div class="col-sm-5" align="right">
                         <a href="http://dceg.cancer.gov" target="_blank">
-                            <img src="DCEG-LTG_banner.png"
+                            <img src="http://dceg.cancer.gov/publishedcontent/images/images/DCEG-logo.svg"
                          alt="Banner for NCI Division of Cancer Epidemiology &amp; Genetics, Laboratory of Translational Genomics"
                          title="Banner for NCI Division of Cancer Epidemiology &amp; Genetics, Laboratory of Translational Genomics"
                          class="logo"></a>
