--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -264,29 +264,31 @@
                 </div>
             </div>
         </div>
-
-        <!--Footer-->
-        <div id="portal-footer">
-            <div class="footerLinks">
-                <a href="http://www.cancer.gov/" title="Home" data-toggle="tooltip"
-                   data-placement="left">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a
-                   href="mailto:NCISOCcerWebAdmin@mail.nih.gov"
-                   target="_top" title="Support">Support</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="http://www.cancer.gov/global/web/policies" title="Policies">Policies</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="http://www.cancer.gov/global/web/policies/accessibility"
-                   title="Accessibility">Accessibility</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a
-                   href="http://cancer.gov/global/viewing-files" target="_blank"
-                   title="Viewing Files">Viewing Files</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a
-                   href="http://www.cancer.gov/global/web/policies/foia" title="FOIA">FOIA</a><br>
-                <br> <a href="http://www.dhhs.gov/">Department of Health
-                    and Human Services</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a
-                    href="http://www.nih.gov/">National Institutes of Health</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="http://www.cancer.gov/">National Cancer Institute</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
-                    href="http://www.usa.gov/">USA.gov</a>
-            </div>
-            <br> <br> NIH...Turning Discovery Into Health<sup>&#174;</sup>
-        </div>
-
+        <footer>
+          <ul class="sitelinks">
+            <li><a href="http://www.cancer.gov/" title="Home">Home</a></li>
+            <li>|</li>
+            <li><a href="mailto:NCISOCcerWebAdmin@mail.nih.gov" target="_top" title="Support">Support</a></li>
+            <li>|</li>
+            <li><a href="http://www.cancer.gov/global/web/policies" title="Policies">Policies</a></li>
+            <li>|</li>
+            <li><a href="http://www.cancer.gov/global/web/policies/accessibility" title="Accessibility">Accessibility</a></li>
+            <li>|</li>
+            <li><a href="http://cancer.gov/global/viewing-files" target="_blank" title="Viewing Files">Viewing Files</a></li>
+            <li>|</li>
+            <li><a href="http://www.cancer.gov/global/web/policies/foia" title="FOIA">FOIA</a></li>
+          </ul>
+          <ul class="sitelinks">
+            <li><a href="http://www.dhhs.gov/">Department of Health and Human Services</a></li>
+            <li>|</li>
+            <li><a href="http://www.nih.gov/">National Institutes of Health</a></li>
+            <li>|</li>
+            <li><a href="http://www.cancer.gov/">National Cancer Institute</a></li>
+            <li>|</li>
+            <li><a href="http://www.usa.gov/">USA.gov</a></li>
+          </ul>
+          <span class="copyright">NIH... Turning Discovey into Health&reg;</span>
+        </footer>
         <script src="http://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <script src="soccer.js" type="text/javascript"></script>        
