--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -182,7 +182,9 @@
 						Before importing, the SOCcer results can be preprocessed to focus the expert review on a subset of job descriptions, such as job descriptions with SOC codes that are tied for the highest score or that had low SOCcer scores. For each job description, SOCAssign will allow the selection of up to 3 SOC-2010 codes. 
 						The codescan be selected from the SOCcer output list, from a list of all SOC-2010 codes, or manually entered.  A validation check ensures that only valid SOC-2010 can be entered</p>
 						<br>
-						<a href="files/soccerAssign.jnlp">SOCAssign</a>
+						<a href="files/soccerAssign.jnlp">SOCAssign</a> &nbsp; run as Web Start <br/> 
+						<a href="files/SOCAssign.jar">Download</a> &nbsp; run as Java Application <br/>
+						If you run as a Java application, please use command like 'java -jar SOCAssign.jar' (make sure the java executable file is in the path)
 					</div>
 
 					<!-- Resources Tab -->
