Format index.html

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -183,7 +183,7 @@
 						The codescan be selected from the SOCcer output list, from a list of all SOC-2010 codes, or manually entered.  A validation check ensures that only valid SOC-2010 can be entered</p>
 						<br>
 						<a href="files/soccerAssign.jnlp">SOCAssign</a> &nbsp; run as Web Start <br/> 
-						<a href="files/SOCAssign.jar">Download</a> &nbsp; run as Java Application <br/>
+						<a href="files/SOCAssign.jar">Download</a> &nbsp; run as Java Application <br/><br/>
 						If you run as a Java application, please use command like 'java -jar SOCAssign.jar' (make sure the java executable file is in the path)
 					</div>
 
