--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -180,11 +180,11 @@
 					<div id="SOCAssignTab" class="tab-pane fade">
 						<p><img src="comingSoon.png" height="70" align="left" alt="Coming Soon"/>SOCAssign is an application to assist expert review of the top 10 SOCcer assignments for each job description to provide an expert SOC-2010 assignment.  SOCAssign will read SOCcer ouput.
 						Before importing, the SOCcer results can be preprocessed to focus the expert review on a subset of job descriptions, such as job descriptions with SOC codes that are tied for the highest score or that had low SOCcer scores. For each job description, SOCAssign will allow the selection of up to 3 SOC-2010 codes. 
-						The codescan be selected from the SOCcer output list, from a list of all SOC-2010 codes, or manually entered.  A validation check ensures that only valid SOC-2010 can be entered</p>
+						The code scan be selected from the SOCcer output list, from a list of all SOC-2010 codes, or manually entered.  A validation check ensures that only valid SOC-2010 can be entered</p>
 						<br>
 						<a href="files/soccerAssign.jnlp">SOCAssign</a> &nbsp; run as Web Start <br/> 
 						<a href="files/SOCAssign.jar">Download</a> &nbsp; run as Java Application <br/><br/>
-						If you run as a Java application, please use command like 'java -jar SOCAssign.jar' (make sure the java executable file is in the path)
+						To run it as a Java application, double click on the downloaded SOCAssign.jar file (make sure the java executable file is in the path)
 					</div>
 
 					<!-- Resources Tab -->
