--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -182,7 +182,7 @@
 						Before importing, the SOCcer results can be preprocessed to focus the expert review on a subset of job descriptions, such as job descriptions with SOC codes that are tied for the highest score or that had low SOCcer scores. For each job description, SOCAssign will allow the selection of up to 3 SOC-2010 codes.
 						The code scan be selected from the SOCcer output list, from a list of all SOC-2010 codes, or manually entered.  A validation check ensures that only valid SOC-2010 can be entered</p>
 						<br>
-						<a href="soccerassign/soccerAssign.jnlp">SOCAssign</a> &nbsp; run as Web Start <br/>
+						<a href="soccerassign/SOCAssign.jnlp">SOCAssign</a> &nbsp; run as Web Start <br/>
 						<a href="soccerassign/SOCAssign.jar">Download</a> &nbsp; run as Java Application <br/><br/>
 						To run it as a Java application, double click on the downloaded SOCAssign.jar file (make sure the java executable file is in the path)
 					</div>
