--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -77,7 +77,7 @@
                         <p>
                           If you publish results that use SOCcer, please reference:<br>
                           Russ DE, Ho K-Y, Colt JS, Armenti KR, Baris D, Wong-Ho C, Davis F, Johnson A, Purdue MP, Karagas MR, Schwarz K, Schwenn M, Silverman DT, Stewart PA, Johnson, CA, Friesen MC,
-                          Computer-based coding of free-text job descriptions to efficiently identify occupations in epidemiological studies. Submitted.
+                          Computer-based coding of free-text job descriptions to efficiently identify occupations in epidemiological studies. <i>Occup Environ Med</i> 2016;<b>73</b>(6):417-24.
                         </p>
                         <p>
                             <a href="#" onclick="activateSoccerTab();">Run SOCcer</a>
@@ -230,7 +230,7 @@
               <h4>References</h4>
               <ol>
                   <li>
-                      Russ DE, Ho K-Y, Colt JS, Armenti KR, Baris D, Wong-Ho C, Davis F, Johnson A, Purdue MP, Karagas MR, Schwarz K, Schwenn M, Silverman DT, Stewart PA, Johnson, CA, Friesen MC, "Computer-based coding of free-text job descriptions to efficiently and reliably incorporate occupational risk factors into large-scale epidemiologic studies", Submitted.
+                      Russ DE, Ho K-Y, Colt JS, Armenti KR, Baris D, Wong-Ho C, Davis F, Johnson A, Purdue MP, Karagas MR, Schwarz K, Schwenn M, Silverman DT, Stewart PA, Johnson, CA, Friesen MC, "Computer-based coding of free-text job descriptions to efficiently and reliably incorporate occupational risk factors into large-scale epidemiologic studies",  <i>Occup Environ Med</i> 2016;<b>73</b>(6):417-24.
                   </li>
                   <li>
                       Russ DE, Ho K-Y, Johnson CA, Friesen MC, "Computer-Based Coding of Occupation Codes for Epidemiological Analyses", <i>Proc IEEE Int Symp Comput Based Med Syst 2014</i>
