adding 508 remediation message

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -251,7 +251,9 @@
           </div>
                 </div>
             </div>
+            <div class="alert alert-info">Site is currently under section 508 review. This site is undergoing remediation for compliance with Section 508. In the interim, should you require any accessibility assistance with any content, please contact us at <a href="mailto:NCISOCcerWebAdmin@mail.nih.gov?subject=Soccer Tool 508">NCISOCcerWebAdmin@mail.nih.gov</a>. Thank you! </div>
         </div>
+     
         <footer class="container footer">
           <div class="center-block">
             <ul class="list-inline">
