--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -109,7 +109,7 @@
                                         </span>
                                     </div>
 
-                                    <input type id="fileSubmit" class="btn btn-success" type="submit" value="Upload"/>
+                                    <button id="fileSubmit" class="btn btn-success" type="submit">Upload</button>
 
                                 </form>
 
