--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -40,6 +40,7 @@
             </div>
 
             <!--Main in Main -->
+            <h1></h1>
             <div id="wrapper">
                 <ul class="nav nav-tabs" id="myTab">
                     <li class="active">
@@ -258,17 +259,17 @@
         <footer class="container footer">
           <div class="center-block">
             <ul class="list-inline">
-              <li><a href="http://www.cancer.gov/" title="Home" target="_blank">Home</a></li>
+              <li><a href="http://www.cancer.gov/" target="_blank">Home</a></li>
               <li>|</li>
-              <li><a href="mailto:NCISOCcerWebAdmin@mail.nih.gov" title="Support" target="_top">Support</a></li>
+              <li><a href="mailto:NCISOCcerWebAdmin@mail.nih.gov" target="_top">Support</a></li>
               <li>|</li>
-              <li><a href="http://www.cancer.gov/global/web/policies" title="Policies" target="_blank">Policies</a></li>
+              <li><a href="http://www.cancer.gov/global/web/policies" target="_blank">Policies</a></li>
               <li>|</li>
-              <li><a href="http://www.cancer.gov/global/web/policies/accessibility" title="Accessibility" target="_blank">Accessibility</a></li>
+              <li><a href="http://www.cancer.gov/global/web/policies/accessibility" target="_blank">Accessibility</a></li>
               <li>|</li>
-              <li><a href="http://cancer.gov/global/viewing-files" title="Viewing Files" target="_blank">Viewing Files</a></li>
+              <li><a href="http://cancer.gov/global/viewing-files" target="_blank">Viewing Files</a></li>
               <li>|</li>
-              <li><a href="http://www.cancer.gov/global/web/policies/foia" title="FOIA" target="_blank">FOIA</a></li>
+              <li><a href="http://www.cancer.gov/global/web/policies/foia" target="_blank">FOIA</a></li>
             </ul>
             <ul class="list-inline">
               <li><a href="http://www.hhs.gov/" target="_blank">U.S. Department of Health and Human Services</a></li>
