fix 508 compliance issue

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <!--Main-->
-        <div class="container" role="main">
+        <div class="container">
             <!-- Banners -->
             <div id="banners" class="row">
                     <div class="col-sm-4">
