--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -282,7 +282,7 @@
             <div class="text-center">NIH ... Turning Discovery Into Health<sup>®</sup></div>
           </div>
         </footer>
-        <script src="http://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <script src="soccer.js" type="text/javascript"></script>
     </body>
