Fixed 508 compliance issue

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -216,7 +216,7 @@
               <p>The SOCcer results are provided in a comma-separated file that contains the row number, job title, SIC, job tasks, and the top ten highest ranked SOC codes, with corresponding SOCcer scores.</p>
               <table class="table table-striped">
                 <thead>
-                  <tr><th>Id</th><th>JobTitle</th><th>SIC</th><th>JobTask</th><th>SOC2010_1</th><th>Score_1</th><th>SOC2010_2</th><th>Score_2</th><th>...</th><th>SOC2010_10</th><th>Score_10</th></tr>
+                  <tr><th scope="col">Id</th><th scope="col">JobTitle</th><th scope="col">SIC</th><th scope="col">JobTask</th><th scope="col">SOC2010_1</th><th scope="col">Score_1</th><th scope="col">SOC2010_2</th><th scope="col">Score_2</th><th scope="col">...</th><th scope="col">SOC2010_10</th><th scope="col">Score_10</th></tr>
                 </thead>
                 <tbody>
                   <tr><td>1</td><td>"Teacher, high school"</td><td> "8211"</td><td> "formulate lesson plans, teach 11th grade match"</td><td>25-2031</td><td>0.979</td><td>25-2032</td><td>0.357</td><td>...</td><td>25-1194</td><td>0.042</td></tr>
