Fixed 508 Compliance Issue

--- a/soccer/webapp/web/index.html
+++ b/soccer/webapp/web/index.html
@@ -166,7 +166,7 @@
             <p>SOCcer can use different models, depending on the type of data that you have.  The table below describes the models available</p>
             <table class="table table-striped">
               <thead>
-                <tr><th>model</th><th>description</th></tr>
+                <tr><th scope="col">model</th><th scope="col">description</th></tr>
               </thead>
               <tbody>
                 <tr>
