--- a/soccer_python/app/index.html
+++ b/soccer_python/app/index.html
@@ -7,11 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="SOCcer: Standardized Occupational Coding for Computer-assisted Epidemiologic Research">
         <!--favicon-->
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
-        <link rel="stylesheet" href="soccer.css">
+        <link rel="stylesheet" href="./css/soccer.css">
     </head>
     <body>
         <!--Main-->
@@ -20,13 +20,13 @@
             <div id="banners" class="row">
                     <div class="col-sm-4">
                         <a href="http://cit.nih.gov/" target="_blank">
-                            <img src="CnIiTh_logo_t.png" alt="NIH Logo" height="78"
+                            <img src="./img/CnIiTh_logo_t.png" alt="NIH Logo" height="78"
                          alt="NIH - Center for Information Technology"
                          title="NIH - Center for Information Technology"></a>
                     </div>
                     <div class="col-sm-3" align="right">
                         <a href="/" target="_blank">
-                        <img src="SOCcer_logo.png" alt="SCOcer Logo" height="80"
+                        <img src="./img/SOCcer_logo.png" alt="SCOcer Logo" height="80"
                          alt="Standardized Occupation Coding for Computer-assisted Epidemiologic Research"
                          title="Standardized Occupation Coding for Computer-assisted Epidemiologic Research"></a></div>
 
@@ -283,7 +283,7 @@
         </footer>
         <script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-        <script src="soccer.js" type="text/javascript"></script>
+        <script src="./js/soccer.js" type="text/javascript"></script>
     </body>
 </html>
 
