--- a/soccer_python/app/index.html
+++ b/soccer_python/app/index.html
@@ -92,8 +92,8 @@
                                 <!--File Upload Form-->
                                 <form id="fileForm" action="upload" method="post" enctype="multipart/form-data" >
 
-                                    <label for="fileSelect">Select a File to Upload:</label> <i class="example"><a href="example1.csv" download="example1.csv">Example 1</a>
-                                        <a href="example2.csv" download="example2.csv">Example 2</a>
+                                    <label for="fileSelect">Select a File to Upload:</label> <i class="example"><a href="./data/example1.csv" download="./data/example1.csv">Example 1</a>
+                                        <a href="./data/example2.csv" download="./data/example2.csv">Example 2</a>
                                         </i>
 
                                     <input id="fileSelect" name="fileSelect" type="file" required/>
