example files  names

--- a/soccer_python/app/index.html
+++ b/soccer_python/app/index.html
@@ -92,8 +92,8 @@
                                 <!--File Upload Form-->
                                 <form id="fileForm" action="upload" method="post" enctype="multipart/form-data" >
 
-                                    <label for="fileSelect">Select a File to Upload:</label> <i class="example"><a href="./data/example1.csv" download="./data/example1.csv">Example 1</a>
-                                        <a href="./data/example2.csv" download="./data/example2.csv">Example 2</a>
+                                    <label for="fileSelect">Select a File to Upload:</label> <i class="example"><a href="./data/example1.csv" download="example1.csv">Example 1</a>
+                                        <a href="./data/example2.csv" download="example2.csv">Example 2</a>
                                         </i>
 
                                     <input id="fileSelect" name="fileSelect" type="file" required/>
@@ -224,7 +224,7 @@
                   <tr><td>2</td><td>"Java Developer"</td><td>"7371"</td><td>"Develop use cases, write computer software in java"</td><td>15-1131</td><td>0.959</td><td>15-1132</td><td>0.717</td><td>...</td><td>11-2031</td><td>0.034</td></tr>
 
                 <tr><td colspn="11"><small>NOTE: SOC3 through SOC9 were omitted and scores were rounded for display purposes.</small></td></tr>
-				</tbody>
+        </tbody>
               </table>
               <p>
                   If you have any questions, comments, or concerns, send us an e-mail at <a href="mailto:NCISOCcerWebAdmin@mail.nih.gov">NCISOCcerWebAdmin@mail.nih.gov</a><br/>
