--- a/soccer_python/app/index.html
+++ b/soccer_python/app/index.html
@@ -102,9 +102,8 @@
                                     <!--SOC system-->
                                     <div class="input-group">
                                         <label for="socSystem">SOCcer Model:</label>
-                                        <select id="socSystem">
+                                        <select id="socSystem" disabled>
                                             <option value = "model10">model v1.0</option>
-                                            <!-- <option value = "model11">model v1.1</option> -->
                                         </select>
                                         <span class="input-group-btn"><button id="btnInfo" data-toggle="popover" data-trigger="focus" title="MODEL: SOCcer Model v1.0" data-content="Features: JobTitle, SIC, JobTasks">1</button>
                                         </span>
