--- a/soccer_python/app/index.html
+++ b/soccer_python/app/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-		<script src="//assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-4b219b82c4737db0e1797b6c511cf10c802c95cb.js"></script>
         <title>Soccer</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="SOCcer: Standardized Occupational Coding for Computer-assisted Epidemiologic Research">
+        <script src="//assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-4b219b82c4737db0e1797b6c511cf10c802c95cb.js"></script>
         <!--favicon-->
         <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
         <!-- Latest compiled and minified CSS -->
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="./css/soccer.css">
     </head>
     <body>
+        <a class="sr-only sr-only-focusable" href="#wrapper">Skip to main content</a>
         <!--Main-->
         <div class="container">
             <!-- Banners -->
