ensure soccer model 2.0 uses Java 8

--- a/soccer_python/app/index.html
+++ b/soccer_python/app/index.html
@@ -106,7 +106,7 @@
                                         <label for="socSystem">SOCcer Model:</label>
                                         <select id="socSystem">
                                             <option value = "model10">model v1.0</option>
-                                            <!-- <option value = "model11">model v1.1</option> -->
+                                            <option value = "model11">model v2.0</option>
                                         </select>
                                         <span class="input-group-btn"><button id="btnInfo" data-toggle="popover" data-trigger="focus" title="MODEL: SOCcer Model v1.0" data-content="Features: JobTitle, SIC, JobTasks">1</button>
                                         </span>
